javafx cinda working